welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: not found: value numslength
	if(numslength==0){
           ^indexOfValue:5: error: not found: value numslength
	if(numslength==1){
           ^indexOfValue:6: error: not found: value j
		if(nums(j)==value){
                        ^indexOfValue:11: error: type mismatch;
 found   : Unit
 required: Int
	for (j<-0 to (nums.length-1)){
              ^